--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import dependencies\n",
     "%matplotlib inline\n",
     "from matplotlib import style\n",
     "style.use('fivethirtyeight')\n",
@@ -18,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import datetime as dt"
@@ -185,16 +187,17 @@
     "# Perform a query to retrieve the data and precipitation scores\n",
     "query_result= session.query(Measurement.prcp, Measurement.date).filter(Measurement.date>= prev_year)\\\n",
     ".order_by(Measurement.date.desc()).all()\n",
+    "#store into dataframe\n",
     "precip_df= pd.DataFrame(query_result, columns=['precipitation', 'date'])\n",
     "\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "precip_df=precip_df.set_index('date')\n",
-    "precip_df\n",
+    "# precip_df\n",
     "# Sort the dataframe by date\n",
     "precip_df= precip_df.sort_index()\n",
-    "precip_df\n",
-    "# # Use Pandas Plotting with Matplotlib to plot the data\n",
+    "# precip_df\n",
+    "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "precip_df.plot(rot= 45)\n",
     "plt.ylabel('Inches')\n",
     "\n"
